# WNetLicensor

./: README.md
Client/: CMakeLists.txt  WClientConfig.h.in
Client/crypto/: CMakeLists.txt  sha256.c  sha256.h  sha256_demo.c
Client/frontends/: CMakeLists.txt  FrontendTerminal.cpp
Client/sql/: CMakeLists.txt  WClient.cpp  WClient.hpp
Service/: def.inc  install.php  sql.inc
Service/assets/js/: supersized-init.js
Service/sql/: login.php  modify_password.php  register.php  reset_password.php  user_info.php
